SQLStatement addition, copyright updates.